feature/character-tag, 태그기능 제작 완료 및 태그에 따른 표시여부 기능 일부 구현, TODO -> 태그선택에 대해서 AND 인지 OR인지하는 옵션 추가하기